test/expected/escape_correct_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "[d]**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "[d]*"
  Literal "*"
]
shit: 2:6: error: No matches for the glob pattern '[d]**'.
     2 |  echo [d]*\*
       |       ^~~~~~ here.
